fix(#944): scope stats completeness to keyspace replicas + taint on dir-enumeration errors